--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["Jeremy Stephens <jeremy.f.stephens@vumc.org>"]
 [dependencies]
 serde_derive = "1.0.55"
 serde = "1.0.55"
-serde-xml-rs = "0.2.1"
+#serde-xml-rs = "0.2.1"
+serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs" }
