--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ serde_derive = "1.0.55"
 serde = "1.0.55"
 #serde-xml-rs = "0.2.1"
 serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs" }
+bincode = "1.0.0"
